<resources>
    <string name="app_name">Kora Music</string>


    <string name="font_family_light">sans-serif-light</string>

    <string name="artist_name_sample">Pharell Williams</string>
    <string name="song_title_sample">Happy</string>

    <string name="activity_main_desc"> This activity displays all the categories available on the app</string>
    <string name="activity_album_desc"> This activity displays a list of albums, with their author and the title of the album </string>
    <string name="activity_artist_desc"> This activity displays a list of artists with the number of their albums available on the app</string>
    <string name="activity_genre_desc"> This activity displays a list of genre, to enable the user to listen to a certain type of music</string>
    <string name="activity_playing_desc"> This activity shows a track when it is playing</string>
    <string name="activity_playlist_desc"> This activity display user\'s playlist</string>
    <string name="activity_song_desc"> This activity displays a list of song from an album of an artist </string>
    <string name="activity_payment_desc"> This activity shows the use of Google Pay API </string>
    <string name="activity_payment_desc_2">The Android Pay API offers a quick and easy path to enable secure, one touch payments. \n It provided methods to request and receive encrypted shipping and payment information about the user, to allow the user to change or update their information and to execute a transaction.</string>


    <string name="activity_main_label"> Browse Categories </string>
    <string name="activity_album_label"> Albums </string>
    <string name="activity_artist_label"> Artists </string>
    <string name="activity_genre_label"> Genre and Moods </string>
    <string name="activity_playing_label"> Now playing </string>
    <string name="activity_playlist_label"> My playlist </string>
    <string name="activity_song_label"> Songs </string>
    <string name="activity_payment_label"> Payment </string>

    <string name="activity_payment_label_2"> Make a Payment </string>
    <string name="activity_genre_label_2"> Genre - Moods </string>
</resources>
