<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wallet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    tools:context="com.mkenlo.koramusic.PaymentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/activity_payment_label"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/activity_payment_desc" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/activity_payment_desc_2"  />

    <fragment
        android:id="@+id/payment_fragment"
        android:name="com.google.android.gms.wallet.fragment.WalletFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        wallet:environment="test"
        wallet:fragmentMode="buyButton" />

</LinearLayout>
